# 115helper

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md
.github/workflows/: docker-image.yml
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: router.py  runs.py  settings.py  sources.py
backend/app/core/: config.py
backend/app/db/: base.py  compat.py  session.py
backend/app/integrations/p115/: client.py  open_uploader.py
backend/app/models/: __init__.py  app_setting.py  enums.py  file_record.py  remote_dir_cache.py  run.py  source.py  task_log.py
backend/app/repositories/: source_repository.py
backend/app/schemas/: common.py  run.py  settings.py  source.py  task_log.py
backend/app/services/: async_run_executor.py  remote_dir_cache_service.py  run_service.py  scheduler_service.py  settings_service.py  source_service.py  sync_scanner.py  task_log_service.py  task_log_stream_service.py  upload_strategy.py
backend/scripts/: init_db.py
backend/tests/: test_async_run_executor.py  test_db_compat.py  test_interruptible_runs.py  test_remote_dir_cache_service.py  test_run_service_async.py  test_run_service_grouping.py  test_scheduler_service.py  test_source_schema.py  test_source_service.py  test_sync_scanner.py  test_task_log_service.py  test_task_log_stream_service.py  test_upload_strategy.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue
helloagents/: CHANGELOG.md  project.md
scripts/: dev-backend.sh  test-backend.sh
(+64 files in other folders)
